<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.features.representative.RepresentativeViewModel" />

        <import type="android.view.View" />
    </data>

    <!--  Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayoutRepresentative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewRepresentativeSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/representative_search"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextAddressLine1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line1}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewRepresentativeSearch" />

            <EditText
                android:id="@+id/editTextAddressLine2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line2}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextAddressLine1" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/spinnerState"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextAddressLine2" />

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/editTextCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/editTextCity"
                app:layout_constraintTop_toTopOf="@id/editTextCity"
                app:stateValue="@{viewModel.address.state}" />

            <EditText
                android:id="@+id/editTextZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@={viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/editTextCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextCity" />

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/find_my_representatives"
                app:layout_constraintTop_toBottomOf="@id/editTextZip" />

            <Button
                android:id="@+id/buttonUseMyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/use_my_location"
                app:layout_constraintTop_toBottomOf="@id/buttonSearch" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutRepresentatives"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSearch">

            <TextView
                android:id="@+id/representative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/my_representatives"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRepresentativeList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:listitem="@layout/item_representative" />

            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:visibilityMode="ignore" />

            <ImageView
                android:id="@+id/imageViewLoading"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/loading"
                android:src="@drawable/loading_animation"
                android:visibility="@{viewModel.loadingVisible ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>